--- a/css/styles.css
+++ b/css/styles.css
@@ -117,7 +117,7 @@ a {
   color: #434455;
 }
 .team-item {
-  background-color: url("path_to_image");
+  background-color: #fff;
 }
 .portfolio-title {
   font-weight: 700;
